# Radar4Motion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  radar_odom.rviz
config/: radar_ego_motion_estimation.ini  radar_point_cloud_odometry.ini  radar_point_cloud_odometry_online.ini
docs/: PARAMETERS.md
include/: core.hpp  types.h
include/ego_motion_estimator/: data_types.h  ego_motion_estimator.cpp  ego_motion_estimator.h  radar_point_cloud.cpp  radar_point_cloud.h
include/radar4motion/: odometry.hpp  preprocessing.hpp
include/radar4motion/ini_handler_cpp/: README.md  c_ini.hpp  ini.h
include/radar4motion/kiss-icp/: Registration.cpp  Registration.hpp
include/vod_utils/: vod_parse_utils.cpp  vod_parse_utils.hpp
launch/: radar4motion_offline.launch  radar4motion_online.launch
src/: core.cpp  main.cpp
src/radar4motion/: odometry.cpp  preprocessing.cpp
